--- a/src/client/sass/main.scss
+++ b/src/client/sass/main.scss
@@ -66,6 +66,11 @@ div {
             width: 320px;
             height: 60px;
 
+            text-align: center;
+            line-height: 60px;
+            vertical-align: middle;
+            font-size: 42px;
+
             position:absolute;
             left:0; right:0;
             top:120px; bottom:0;
